# musictechnology_and_art

./: README.md
HelloWorld_cmake/: CMakeLists.txt  README.txt
HelloWorld_cmake/include/: Log.h
HelloWorld_cmake/src/: Log.cpp  main.cpp
